# hsudoku

./: .gitignore  .hlint.yaml  README.md  hsudoku.cabal  stack-lts-14.yaml  stack-lts-16.yaml  stack-nightly.yaml
.github/workflows/: cabal.yml  lint.yml  stack.yml
app/: Hsudoku.hs
src/: UserInterface.hs  Util.hs
src/Sudoku/: Loader.hs  Solver.hs  Type.hs
test/: TestData.hs  UserInterfaceSpec.hs  UtilSpec.hs
test/Sudoku/: LoaderSpec.hs  SolverSpec.hs  TypeSpec.hs
