cabal-version:      2.4
name:               hsudoku
version:            0.1.1.0
synopsis:           Sudoku game with a GTK3 interface
description:
  This package realizes a graphical GTK3 sudoku game. Moreover it
  provides modules for loading and solving sudoku grids.

license:            MIT
license-file:       LICENSE
author:             Marcel Moosbrugger
maintainer:         marcelmoosbrugger@gmail.com
category:           Game
homepage:           https://github.com/marcelmoosbrugger/hsudoku
bug-reports:        https://github.com/marcelmoosbrugger/hsudoku/issues
build-type:         Simple
tested-with:        GHC ==8.0.2
extra-source-files:
  gui/hsudoku.ui
  gui/icon.png
  gui/theme.css

data-files:
  gui/hsudoku.ui
  gui/icon.png
  gui/theme.css

source-repository head
  type:     git
  location: git@github.com:marcelmoosbrugger/hsudoku.git   

library
  hs-source-dirs:     src
  exposed-modules:
    Sudoku.Loader
    Sudoku.Solver
    Sudoku.Type
    UserInterface
    Util

  other-modules:      Paths_hsudoku
  build-depends:
    , base
    , bytestring
    , gi-gtk
    , HandsomeSoup
    , haskell-gi-base
    , http-client
    , http-client-tls
    , hxt
    , text

  default-language:   Haskell2010
  default-extensions:
    OverloadedLabels
    OverloadedStrings

executable hsudoku
  ghc-options:        -threaded
  main-is:            Hsudoku.hs
  build-depends:
    , base
    , bytestring
    , gi-gtk
    , HandsomeSoup
    , haskell-gi-base
    , hsudoku
    , http-client
    , http-client-tls
    , hxt
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    OverloadedLabels
    OverloadedStrings

test-suite spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , gi-gtk
    , HandsomeSoup
    , haskell-gi-base
    , hspec
    , hsudoku
    , http-client
    , http-client-tls
    , hxt
    , QuickCheck
    , text

  other-modules:
    Sudoku.LoaderSpec
    Sudoku.SolverSpec
    Sudoku.TypeSpec
    TestData
    UserInterfaceSpec
    UtilSpec

  default-language:   Haskell2010
  default-extensions:
    OverloadedLabels
    OverloadedStrings

-- Travis does not support ubuntu 16.04 yet and therefore
-- GTK+ 3.20 cannot be installed. As the user interface
-- uses new features from GTK+ 3.20, these cannot be tested on travis
test-suite travis
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Travis.hs
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , gi-gtk
    , HandsomeSoup
    , haskell-gi-base
    , hspec
    , hsudoku
    , http-client
    , http-client-tls
    , hxt
    , QuickCheck
    , text

  other-modules:
    Sudoku.LoaderSpec
    Sudoku.SolverSpec
    Sudoku.TypeSpec
    TestData
    UtilSpec

  default-language:   Haskell2010
  default-extensions:
    OverloadedLabels
    OverloadedStrings
