cabal-version:      2.4
name:               hsudoku
version:            0.1.1.0
synopsis:           Sudoku game with a GTK3 interface
description:
  This package realizes a graphical GTK3 sudoku game. Moreover it
  provides modules for loading and solving sudoku grids.

license:            MIT
license-file:       LICENSE
author:             Marcel Moosbrugger
maintainer:         marcelmoosbrugger@gmail.com
category:           Game
homepage:           https://github.com/marcelmoosbrugger/hsudoku
bug-reports:        https://github.com/marcelmoosbrugger/hsudoku/issues
build-type:         Simple
tested-with:        GHC ==8.8.4 || ==8.10.2
extra-source-files:
  gui/hsudoku.ui
  gui/icon.png
  gui/theme.css

data-files:
  gui/hsudoku.ui
  gui/icon.png
  gui/theme.css

source-repository head
  type:     git
  location: git@github.com:marcelmoosbrugger/hsudoku.git

common common
  build-depends:
    , base    >=4.12 && <4.15
    , gi-gtk  ^>=3.0

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , bytestring       >=0.10 && <0.12
    , HandsomeSoup     ^>=0.4
    , haskell-gi-base  ^>=0.24
    , http-client      ^>=0.6
    , http-client-tls  ^>=0.3
    , hxt              ^>=9.3
    , text             ^>=1.2

  -- cabal-fmt: expand src
  exposed-modules:
    Sudoku.Loader
    Sudoku.Solver
    Sudoku.Type
    UserInterface
    Util

  other-modules:   Paths_hsudoku

executable hsudoku
  import:        common
  main-is:       app/Hsudoku.hs
  build-depends:
    , haskell-gi-base  ^>=0.24
    , hsudoku

  ghc-options:   -O2

test-suite spec
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec       ^>=2.7
    , hsudoku
    , QuickCheck  >=2.13 && <2.15

  -- cabal-fmt: expand test -Spec
  other-modules:
    Sudoku.LoaderSpec
    Sudoku.SolverSpec
    Sudoku.TypeSpec
    TestData
    UserInterfaceSpec
    UtilSpec
